--- a/index.html
+++ b/index.html
@@ -18,14 +18,6 @@
         <!-- <link rel="stylesheet" href="./css/skills-style.css"> -->
         <link rel="stylesheet" href="./css/project-style.css">
 
-        <!-- font -->
-        <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Lobster|Pacifico|Poiret+One&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Asap:700|Catamaran:700|Maven+Pro:700|Righteous&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Do+Hyeon|Sniglet&display=swap" rel="stylesheet">
-        <style>
-
-        </style>
     </head>
     <body data-spy="scroll" data-target="#navbar-example2" data-offset="50">
         <nav id="navbar-example2" class="navbar navbar-light fixed-top justify-content-center" style="background-color: #d67b53;">
@@ -48,7 +40,6 @@
             </ul>
         </nav>
         <div id="main">
-            
             <div class="black-cover">
                 <div id="intro-view">
                     <div id="intro-contents">
@@ -74,7 +65,7 @@
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-12" id="introduce">
                             <div class="contents">
-                                <p style="font-size:20px;">사람들에게 도움이 되는 개발자</p>
+                                <p id="about-subtitle">사람들에게 도움이 되는 개발자</p>
                                 <p>
                                 개발자로서 꿈꾸는 저의 최종 목표는 사람들에게 도움이 되는 개발자가 되는 것입니다. 
                                 막연하게 꿈꾸는 것이 아닌, 실질적으로 도움이 되는 개발자가 되기 위해 블로그를 운영하며 다른 개발자들에게 도움을 줍니다. 
