메타 태그 추가

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="robots" content="noindex, noarchive">
+        <meta name="format-detection" content="telephone=no">
+        
         <!-- bootstrap -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -16,8 +19,7 @@
         <!-- view -->
         <link rel="stylesheet" href="./css/main.css">
         <!-- <link rel="stylesheet" href="./css/skills-style.css"> -->
-        <link rel="stylesheet" href="./css/project-style.css">
-
+        <link rel="stylesheet" href="./css/project-style.css">        
     </head>
     <body data-spy="scroll" data-target="#navbar-example2" data-offset="50">
         <nav id="navbar-example2" class="navbar navbar-light fixed-top justify-content-center" style="background-color: #d67b53;">
