별똥별 관련 애니메이션 소스 코드 추가

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <!-- view -->
         <link rel="stylesheet" href="./css/main.css">
         <!-- <link rel="stylesheet" href="./css/skills-style.css"> -->
-        <link rel="stylesheet" href="./css/project-style.css">        
+        <link rel="stylesheet" href="./css/project-style.css">    
+        <link rel="stylesheet" href="./css/meteor.css">    
     </head>
     <body data-spy="scroll" data-target="#navbar-example2" data-offset="50">
         <nav id="navbar-example2" class="navbar navbar-light fixed-top justify-content-center" style="background-color: #d67b53;">
@@ -44,9 +45,11 @@
         <div id="main">
             <div class="black-cover">
                 <div id="intro-view">
-                    <div id="intro-contents">
-                        <span id="my-job">Developer</span><br/>
-                        <span id="my-name">Lee Na Hyun</span>
+                    <div id="star-container">
+                        <div id="intro-contents">
+                            <span id="my-job">Developer</span><br/>
+                            <span id="my-name">Lee Na Hyun</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -301,5 +304,9 @@
         <!-- custom -->
         <script src="js/index.js"></script>
         <!-- <script src="js/img-fluid.js"></script> -->
+        <!-- 별똥별 -->
+        <script src="js/meteor.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script> -->
+
     </body>
 </html>
