주석 및 skiils 부분 애니메이션 효과 수정

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="contents">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-6 col-sm-6 col-xs-12 wow slideInLeft">
+                        <div class="col-md-6 col-sm-6 col-xs-12 wow zoomIn">
                             <div class="skill-div">
                                 <span class="skill-part-name">Front-End</span>
                             </div>
@@ -139,7 +139,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 col-sm-6 col-xs-12 wow slideInRight">
+                        <div class="col-md-6 col-sm-6 col-xs-12 wow zoomIn">
                             <div class="skill-div">
                                 <span class="skill-part-name">Back-End</span>
                             </div>
@@ -314,7 +314,7 @@
         <!-- loader -->
         <script>
             $(window).on("load", function() {
-                $("body").css('overflowX','visible');
+                $("body").css('overflowX','visible'); //로딩 후 다시 스크롤바가 보이게하는 역할
                 $(".loader-view").fadeOut("slow");
             });
         </script>
