채팅앱 서버 주소 수정

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                             <h5 class="card-title">React를 이용한 채팅 페이지</h5>     
                                         </div>
                                         <div class="site-move">
-                                            <!-- <a class="project-site-btn" href="http://13.125.217.211:3000/">Demo</a> -->
+                                            <a class="project-site-btn" href="http://15.164.164.42:4000/">Demo</a>
                                             <a class="project-site-btn" href="https://github.com/hyoni0817/React-chat-app">Github</a>
                                         </div>
                                     </div> 
