Add: skill의 내용을 수정 및 추가

--- a/index.html
+++ b/index.html
@@ -112,29 +112,32 @@
                             </div>
                             <div class="lang-intro">
                                 <p class="lang-title">HTML5</p>
-                                <div class="lang-ability">모바일 페이지 제작</div>
+                                <div class="lang-ability">반응형 웹 페이지 제작</div>
                             </div>
                             <div class="lang-intro">
                                 <p class="lang-title">CSS3</p>
                                 <div class="lang-ability">
                                     반응형 웹 디자인<br />
-                                    Bootstrap 사용<br />
+                                    Bootstrap 사용(Custom 가능)<br />
                                 </div>
                             </div>
                             <div class="lang-intro">
                                 <p class="lang-title">Javascript</p>
                                 <div class="lang-ability">
-                                    jQuery 3 사용<br />
-                                    ES5를 주로 사용(ES6도 활용 가능)<br />
+                                    ES6, ES5를 사용하여 개발<br />
                                     Ajax를 이용한 중복 검사, 좋아요, 유저 체크 기능 개발<br />
+                                    jQuery 3 사용<br />
                                 </div>
                             </div>
                             <div class="lang-intro">
                                 <p class="lang-title">React</p>
                                 <div class="lang-ability">
-                                    create-react-app 사용<br />
-                                    express 서버 연동<br />
-                                    socket.io를 이용한 채팅 페이지 구현<br />
+                                    Next.js를 사용하여 SPA 개발<br />
+                                    (로그인, 서버사이드 렌더링, 최적화 부분은 아직 공부중)<br />
+                                    Redux를 통해 State 관리<br />
+                                    서버와의 통신은 Redux-Saga를 사용해서 비동기 처리<br />
+                                    Styled-components 사용<br />
+                                    Ant Design 사용(Custom 가능)<br />
                                     Material-UI 사용<br />
                                 </div>
                             </div>
@@ -148,8 +151,10 @@
                                     <p class="lang-title">Node.js</p>
                                     <div class="lang-ability">
                                         서버 구축 가능<br />
-                                        게시판(읽기,수정,삭제,검섹,비밀글) 및 로그인 페이지 제작가능<br />
+                                        게시판(읽기,수정,삭제,검섹,비밀글) 및 로그인 API 제작가능<br />
+                                        (React에서 로그인 연동은 아직 공부중)<br />
                                         MySQL 연동<br />
+                                        Sequelize를 사용하여 개발 가능<br />
                                         Ajax를 이용한 데이터 통신<br />
                                     </div>
                                 </div>
@@ -164,7 +169,7 @@
                                 <div class="lang-intro">
                                     <p class="lang-title">Amazon Web Service</p>
                                     <div class="lang-ability">
-                                        EC2, S3, RDS 사용하여 홈페이지 구축<br />
+                                        EC2, S3, RDS 사용하여 개발 가능<br />
                                     </div>
                                 </div>
                             </div>
