Add: 링크 클릭 시 새 탭에서 열리도록 target="_blank" 추가

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                                 <img id="my-profile" src="./images/myphoto.jpg" alt="myprofile" class="rounded-circle" style="width:200px;height:200px;">
                             </div>
                             <div id="my-site" style="text-align: center;">
-                                <a class="my-site-btn" href="https://blog.naver.com/dudu1104">Blog</a>
-                                <a class="my-site-btn" href="https://github.com/hyoni0817">Github</a>
-                                <a class="my-site-btn " href="https://stackoverflow.com/users/8006592/sophia">Stack overflow</a>
+                                <a class="my-site-btn" href="https://blog.naver.com/dudu1104" target="_blank">Blog</a>
+                                <a class="my-site-btn" href="https://github.com/hyoni0817" target="_blank">Github</a>
+                                <a class="my-site-btn " href="https://stackoverflow.com/users/8006592/sophia" target="_blank">Stack overflow</a>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-12 wow fadeIn" id="introduce">
@@ -191,8 +191,8 @@
                                             <h5 class="card-title">Study Planner</h5>     
                                         </div>
                                         <div class="site-move">
-                                            <a class="project-site-btn" href="https://drive.google.com/file/d/1FS8lfv8IMtV94dA6ks-R6qN6ZhYRY2rg/view?usp=sharing">Detail</a>
-                                            <a class="project-site-btn" href="https://github.com/hyoni0817/study-planner">Github</a>
+                                            <a class="project-site-btn" href="https://drive.google.com/file/d/1FS8lfv8IMtV94dA6ks-R6qN6ZhYRY2rg/view?usp=sharing" target="_blank">Detail</a>
+                                            <a class="project-site-btn" href="https://github.com/hyoni0817/study-planner" target="_blank">Github</a>
                                         </div>
                                     </div> 
                                 </div>
@@ -233,8 +233,8 @@
                                             <h5 class="card-title">React를 이용한 채팅 페이지</h5>     
                                         </div>
                                         <div class="site-move">
-                                            <a class="project-site-btn" href="http://52.78.206.93:4000/">Demo</a>
-                                            <a class="project-site-btn" href="https://github.com/hyoni0817/React-chat-app">Github</a>
+                                            <a class="project-site-btn" href="http://52.78.206.93:4000/" target="_blank">Demo</a>
+                                            <a class="project-site-btn" href="https://github.com/hyoni0817/React-chat-app" target="_blank">Github</a>
                                         </div>
                                     </div> 
                                 </div>
@@ -272,8 +272,8 @@
                                             <h5 class="card-title">식당 예약 페이지</h5>   
                                         </div>
                                         <div class="site-move">
-                                            <a class="project-site-btn" href="http://52.78.206.93:3000/">Demo</a>
-                                            <a class="project-site-btn" href="https://github.com/hyoni0817/Reservation-Website-Project">Github</a>
+                                            <a class="project-site-btn" href="http://52.78.206.93:3000/" target="_blank">Demo</a>
+                                            <a class="project-site-btn" href="https://github.com/hyoni0817/Reservation-Website-Project" target="_blank">Github</a>
                                         </div>  
                                     </div>
                                 </div>
@@ -313,7 +313,7 @@
                                             <h5 class="card-title">직장인들을 위한 카풀 '직풀'</h5>   
                                         </div>
                                         <div class="site-move">
-                                            <a class="project-site-btn" href="https://github.com/hyoni0817/Node.js-AWS-MySQL">Github</a>
+                                            <a class="project-site-btn" href="https://github.com/hyoni0817/Node.js-AWS-MySQL" target="_blank">Github</a>
                                         </div> 
                                     </div>
                                 </div>
