Update: 프로젝트 내용 수정

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                     <p class="project-subtitle">프로젝트 소개</p>
                                     <div class="project-contents">
                                         SPA 개발 공부 겸 평소에 스터디 플래너를 사용하면서 느꼈던 불편함을 보완하고 장점은 강화하는 웹 사이트를 제작하고 싶어서 진행한 프로젝트입니다. 
-                                        UI 및 각종 기능 구현, API 및 DB 설계, 서버 구축 등을 혼자서 진행했는데 각 분야의 부족했던 지식을 보완하고 새로운 기술을 공부하는 데 도움이 되었습니다.
+                                        UI 및 각종 기능 구현, API 및 DB 연동, 서버 구축 등을 혼자서 진행했는데 각 분야의 부족했던 지식을 보완하고 새로운 기술을 공부하는 데 도움이 되었습니다.
                                     </div>
                                     <p class="project-subtitle">사용한 기술</p>
                                     <div class="project-skills">
@@ -286,7 +286,7 @@
                                     </div>
                                     <p class="project-subtitle">프로젝트 소개</p>
                                     <div class="project-contents">
-                                        <p class="card-text">화면 구성부터 API와 DB 설계, 서버 구축까지 혼자서 진행한 프로젝트로서 리뷰 작성, Q&A, 예약 기능 등을 제공하는 가상의 식당 사이트를 개발하였습니다.</p>
+                                        <p class="card-text">화면 구성부터 API와 DB 연동, 서버 구축까지 혼자서 진행한 프로젝트로서 리뷰 작성, Q&A, 예약 기능 등을 제공하는 가상의 식당 사이트를 개발하였습니다.</p>
                                     </div>
                                     <p class="project-subtitle">사용한 기술</p>
                                     <div class="project-skills">
