--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
                             <div class="contents">
                                 <p id="about-subtitle">사람들에게 도움이 되는 개발자</p>
                                 <p>
-                                개발자로서 꿈꾸는 저의 최종 목표는 사람들에게 도움이 되는 개발자가 되는 것입니다. 
-                                막연하게 꿈꾸는 것이 아닌, 실질적으로 도움이 되는 개발자가 되기 위해 블로그를 운영하며 다른 개발자들에게 도움을 줍니다. 
+                                개발자로서 꿈꾸는 저의 최종 목표는 사람들에게 도움이 되는 개발자가 되는 것입니다.
+                                </p>
+                                <p>
+                                막연하게 꿈꾸는 것이 아닌, 실질적으로 도움이 되는 개발자가 되기 위해 블로그를 운영하며 다른 개발자들에게 도움을 줍니다. <br/>
                                 또한 잘 알아야 도와줄 수 있기에 유튜브나 여러 강좌 사이트를 통해 공부하고, 배운 지식들을 저만의 것으로 만들기 위해 
                                 개발일지를 쓰며 개인 프로젝트도 꾸준히 하는 중입니다.
                                 </p>
