Update: skills 내용 수정 및 <br/>에서 <ul>로 변경

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
     <head>
+        <meta charset="utf-8">
         <title>Nahyun Portfolio</title>
 
         <!-- Required meta tags -->
@@ -113,34 +114,35 @@
                                 <span class="skill-part-name">Front-End</span>
                             </div>
                             <div class="lang-intro">
-                                <p class="lang-title">HTML5</p>
-                                <div class="lang-ability">반응형 웹 페이지 제작</div>
-                            </div>
-                            <div class="lang-intro">
-                                <p class="lang-title">CSS3</p>
-                                <div class="lang-ability">
-                                    반응형 웹 디자인<br />
-                                    Bootstrap 사용(Custom 가능)<br />
+                                <p class="lang-title">HTML & CSS</p>
+                                <div>
+                                    <ul class="lang-ability">
+                                        <li>반응형 웹 개발</li>
+                                        <li>Bootstrap 사용(Custom 가능)</li>
+                                    </ul>
                                 </div>
                             </div>
                             <div class="lang-intro">
                                 <p class="lang-title">Javascript</p>
-                                <div class="lang-ability">
-                                    ES6, ES5를 사용하여 개발<br />
-                                    Ajax를 이용한 중복 검사, 좋아요, 유저 체크 기능 개발<br />
-                                    jQuery 3 사용<br />
+                                <div>
+                                    <ul class="lang-ability">
+                                        <li>ES6, ES5를 사용하여 개발</li>
+                                        <li>Ajax를 이용하여 비동기 통신 처리</li>
+                                        <li>VanillaJS로 개발 가능</li>
+                                        <li>jQuery3.x 사용</li>        
+                                    </ul>
                                 </div>
                             </div>
                             <div class="lang-intro">
                                 <p class="lang-title">React</p>
-                                <div class="lang-ability">
-                                    Next.js를 사용하여 SPA 개발<br />
-                                    (로그인, 서버사이드 렌더링, 최적화 부분은 아직 공부중)<br />
-                                    Redux를 통해 State 관리<br />
-                                    서버와의 통신은 Redux-Saga를 사용해서 비동기 처리<br />
-                                    Styled-components 사용<br />
-                                    Ant Design 사용(Custom 가능)<br />
-                                    Material-UI 사용<br />
+                                <div>
+                                    <ul class="lang-ability">
+                                        <li>Hooks를 사용하여 개발</li>
+                                        <li>Next.js를 사용하여 SPA 개발 및 SSR 처리</li>
+                                        <li>Redux를 사용해 State 관리</li>
+                                        <li>Redux-Saga를 통해 비동기 액션 처리</li>
+                                        <li>UI 구성 시 Material-UI, Ant Design, Styled-components 사용</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -151,27 +153,31 @@
                             <div class="skill-intro">
                                 <div class="lang-intro">
                                     <p class="lang-title">Node.js</p>
-                                    <div class="lang-ability">
-                                        서버 구축 가능<br />
-                                        게시판(읽기,수정,삭제,검섹,비밀글) 및 로그인 API 제작가능<br />
-                                        (React에서 로그인 연동은 아직 공부중)<br />
-                                        MySQL 연동<br />
-                                        Sequelize를 사용하여 개발 가능<br />
-                                        Ajax를 이용한 데이터 통신<br />
+                                    <div>
+                                        <ul class="lang-ability">
+                                            <li>Express.js 사용하여 서버 구축</li>
+                                            <li>REST API 설계</li>
+                                            <li>MySQL 모듈 및 Sequelize로 MySQL을 연동하여 CRUD 구현</li>
+                                        </ul>
                                     </div>
                                 </div>
                                 <div class="lang-intro">
                                     <p class="lang-title">MySQL</p>
-                                    <div class="lang-ability">
-                                        테이블 설계<br />
-                                        CRUD를 사용해서 SQL문 작성가능<br />
-                                        Node.js 연동<br />
+                                    <div>
+                                        <ul class="lang-ability">
+                                            <li>테이블 설계</li>
+                                            <li>SQL문으로 CRUD 구현 가능</li>
+                                        </ul>
                                     </div>
                                 </div>
                                 <div class="lang-intro">
                                     <p class="lang-title">Amazon Web Service</p>
-                                    <div class="lang-ability">
-                                        EC2, S3, RDS 사용하여 개발 가능<br />
+                                    <div>
+                                        <ul class="lang-ability">
+                                            <li>EC2에서 Ubuntu OS를 사용하는 인스턴스를 생성하여  PM2를 통해 서버를 배포</li>
+                                            <li>AWS RDS에서 MySQL을 DB로 사용</li>
+                                            <li>Node.js를 사용해 S3에 이미지 업로드</li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
