Fix: 반응형에 맞게 skiil 이름의 padding 및 margin 수정

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-6 col-xs-12 wow zoomIn">
                             <div class="skill-div">
-                                <span class="skill-part-name">Front-End</span>
+                                <span class="skill-part-name">Front End</span>
                             </div>
                             <div class="lang-intro">
                                 <p class="lang-title">HTML & CSS</p>
@@ -148,7 +148,7 @@
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-12 wow zoomIn">
                             <div class="skill-div">
-                                <span class="skill-part-name">Back-End</span>
+                                <span class="skill-part-name">Back End</span>
                             </div>
                             <div class="skill-intro">
                                 <div class="lang-intro">
