Add: 프로젝트를 개인과 팀으로 분리

--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
             <p class="title">Project</p>          
             <div class="contents wow fadeInUp">
                 <div class="container">
+                    <p class="project-part-name">Personal</p>
                     <div class="card mb-3" >
                         <div class="row no-gutters">
                             <div class="col-md-4 card-image-border img-fixed" >
@@ -312,6 +313,7 @@
                             </div>
                         </div>
                     </div>
+                    <p class="project-part-name">Team</p>
                     <div class="card mb-3" >
                         <div class="row no-gutters">
                             <div class="col-md-4 card-image-border img-fixed" >
