Add: 직풀 프로젝트에 팀 구성원 추가 및 맡은 역할 수정

--- a/index.html
+++ b/index.html
@@ -374,9 +374,13 @@
                                     <div class="project-contents">
                                         직장인들이 출퇴근 시간에 같이 카풀할 사람을 구할 수 있도록 해주는 서비스
                                     </div>
+                                    <p class="project-subtitle">팀 구성원</p>
+                                    <div class="project-contents">
+                                        기획자 및 디자이너 1명, 안드로이드 개발자 2명, 서버 개발자 1명
+                                    </div>
                                     <p class="project-subtitle">맡은 역할 및 개발 기간</p>
                                     <div class="project-contents">
-                                        백엔드 개발 / 2016.06 ~ 2017.07 (개발 및 서비스 운영 기간 포함 1년)
+                                        서버 개발 / 2016.06 ~ 2017.07 (개발 및 서비스 운영 기간 포함 1년)
                                     </div>
                                     <p class="project-subtitle">사용한 기술</p>
                                     <div class="project-skills">
