Add: 프로젝트 내용의 간격 조정

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                                 </div>
                             </div>
                             <div class="col-md-8 card-body-border">
-                                <div class="card-body">
+                                <div class="card-body" style="padding-top:0;">
                                     <p class="project-subtitle">프로젝트 소개</p>
                                     <div class="project-contents">
                                         직장인들이 출퇴근 시간에 같이 카풀할 사람을 구할 수 있도록 해주는 서비스
