--- a/index.html
+++ b/index.html
@@ -200,8 +200,9 @@
                                             <h5 class="card-title">Study Planner</h5>     
                                         </div>
                                         <div class="site-move">
-                                            <a class="project-site-btn" href="https://drive.google.com/file/d/1FS8lfv8IMtV94dA6ks-R6qN6ZhYRY2rg/view?usp=sharing" target="_blank">Detail</a>
-                                            <a class="project-site-btn" href="https://github.com/hyoni0817/study-planner" target="_blank">Github</a>
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="http://13.125.220.200:4050/" target="_blank">Demo</a></button>
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="https://github.com/hyoni0817/study-planner" target="_blank">Github</a></button>
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="https://steadfast-cardinal-956.notion.site/Study-planner-6df9506c9f7e450db691946545580c57" target="_blank">개발 일지</a></button>
                                         </div>
                                     </div> 
                                 </div>
@@ -255,8 +256,8 @@
                                             <h5 class="card-title">React를 이용한 채팅 페이지</h5>     
                                         </div>
                                         <div class="site-move">
-                                            <a class="project-site-btn" href="http://52.78.206.93:4000/" target="_blank">Demo</a>
-                                            <a class="project-site-btn" href="https://github.com/hyoni0817/React-chat-app" target="_blank">Github</a>
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="http://52.78.206.93:4000/" target="_blank">Demo</a></button>
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="https://github.com/hyoni0817/React-chat-app" target="_blank">Github</a></button>
                                         </div>
                                     </div> 
                                 </div>
@@ -306,8 +307,8 @@
                                             <h5 class="card-title">식당 예약 페이지</h5>   
                                         </div>
                                         <div class="site-move">
-                                            <a class="project-site-btn" href="http://52.78.206.93:3000/" target="_blank">Demo</a>
-                                            <a class="project-site-btn" href="https://github.com/hyoni0817/Reservation-Website-Project" target="_blank">Github</a>
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="http://52.78.206.93:3000/" target="_blank">Demo</a></button>
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="https://github.com/hyoni0817/Reservation-Website-Project" target="_blank">Github</a></button>
                                         </div>  
                                     </div>
                                 </div>
@@ -363,7 +364,7 @@
                                             <h5 class="card-title">직장인들을 위한 카풀 '직풀'</h5>   
                                         </div>
                                         <div class="site-move">
-                                            <a class="project-site-btn" href="https://github.com/hyoni0817/Node.js-AWS-MySQL" target="_blank">Github</a>
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="https://github.com/hyoni0817/Node.js-AWS-MySQL" target="_blank">Github</a></button>
                                         </div> 
                                     </div>
                                 </div>
