Add: 스터디 플래너, 채팅, 직풀에 사용한 기술 추가

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
                                         <p class="skill-name">Node.js</p>
                                         <p class="skill-name">MySQL</p>
                                         <p class="skill-name">Sequelize</p>
+                                        <p class="skill-name">AWS(EC2, RDS)</p>
                                     </div>
                                     <details class="project-performance-tasks">
                                         <summary class="project-subtitle">
@@ -275,12 +276,12 @@
                                     <p class="project-subtitle">사용한 기술</p>
                                     <div class="project-skills">
                                         <span class="skill-name">React</span>
+                                        <p class="skill-name">Create-React-App</p>
                                         <p class="skill-name">Material-UI</p>
                                         <span class="skill-name">Node.js</span>
                                         <span class="skill-name">AWS(EC2)</span>
                                         <span class="skill-name">socket.io</span>
-        
-                                    </div>    
+                                    </div>   
                                     <details class="project-performance-tasks">
                                         <summary class="project-subtitle">
                                             진행한 일 및 배운 점
@@ -388,6 +389,7 @@
                                         <span class="skill-name">Node.js</span>
                                         <span class="skill-name">MySQL</span>
                                         <span class="skill-name">AWS(EC2, S3, RDS)</span>
+                                        <span class="skill-name">Firebase Cloud Messaging</span>
                                     </div>   
                                     <details class="project-performance-tasks">
                                         <summary class="project-subtitle">
