Update: skill-name을 표현하는 태그를 <span>에서 <p>로 통일

--- a/index.html
+++ b/index.html
@@ -275,12 +275,12 @@
                                     </div>
                                     <p class="project-subtitle">사용한 기술</p>
                                     <div class="project-skills">
-                                        <span class="skill-name">React</span>
+                                        <p class="skill-name">React</p>
                                         <p class="skill-name">Create-React-App</p>
                                         <p class="skill-name">Material-UI</p>
-                                        <span class="skill-name">Node.js</span>
-                                        <span class="skill-name">AWS(EC2)</span>
-                                        <span class="skill-name">socket.io</span>
+                                        <p class="skill-name">Node.js</p>
+                                        <p class="skill-name">AWS(EC2)</p>
+                                        <p class="skill-name">Socket.io</p>
                                     </div>   
                                     <details class="project-performance-tasks">
                                         <summary class="project-subtitle">
@@ -386,10 +386,10 @@
                                     </div>
                                     <p class="project-subtitle">사용한 기술</p>
                                     <div class="project-skills">
-                                        <span class="skill-name">Node.js</span>
-                                        <span class="skill-name">MySQL</span>
-                                        <span class="skill-name">AWS(EC2, S3, RDS)</span>
-                                        <span class="skill-name">Firebase Cloud Messaging</span>
+                                        <p class="skill-name">Node.js</p>
+                                        <p class="skill-name">MySQL</p>
+                                        <p class="skill-name">AWS(EC2, S3, RDS)</p>
+                                        <p class="skill-name">Firebase Cloud Messaging</p>
                                     </div>   
                                     <details class="project-performance-tasks">
                                         <summary class="project-subtitle">
