Update: <a>에서 <button>으로 변경 및 버튼 나타내는 공간 재정렬

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <p class="title">About Me</p>
-                            <div style="text-align: center;margin-bottom:40px;">
+                            <div style="text-align: center;margin-bottom:20px;">
                                 <img id="my-profile" src="./images/myphoto.jpg" alt="myprofile" class="rounded-circle" style="width:200px;height:200px;">
                             </div>
                             <div id="my-site" style="text-align: center;">
-                                <a class="my-site-btn" href="https://blog.naver.com/dudu1104" target="_blank">Blog</a>
-                                <a class="my-site-btn" href="https://github.com/hyoni0817" target="_blank">Github</a>
-                                <a class="my-site-btn " href="https://stackoverflow.com/users/8006592/sophia" target="_blank">Stack overflow</a>
+                                <button class="my-site-btn"><a class="my-site-btn-link" href="https://blog.naver.com/dudu1104" target="_blank">Blog</a></button>
+                                <button class="my-site-btn"><a class="my-site-btn-link" href="https://github.com/hyoni0817" target="_blank">Github</a></button>
+                                <button class="my-site-btn"><a class="my-site-btn-link" href="https://stackoverflow.com/users/8006592/sophia" target="_blank">Stack overflow</a></button>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-12 wow fadeIn" id="introduce">
