Fix: 식당 예약 프로젝트 소개 내용 오타

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                 <div class="card-body">
                                     <p class="project-subtitle">프로젝트 소개</p>
                                     <div class="project-contents">
-                                        약 서비스를 제공하는 가상의 식당 웹 사이트
+                                        예약 서비스를 제공하는 가상의 식당 웹 사이트
                                     </div>
                                     <p class="project-subtitle">맡은 역할 및 개발 기간</p>
                                     <div class="project-contents">
