Rename: '식당 예약 페이지'에서 '식당 예약 웹 사이트'로 프로젝트 이름 변경

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                                 <div class="project-img1">
                                     <div class="title-and-move-btn">
                                         <div class="project-title">
-                                            <h5 class="card-title">식당 예약 페이지</h5>   
+                                            <h5 class="card-title">식당 예약 웹 사이트</h5>   
                                         </div>
                                         <div class="site-move">
                                             <button class="project-site-btn"><a class="project-site-btn-link" href="http://13.125.220.200:3000/" target="_blank">Demo</a></button>
