Add: 인프런 클론코딩 팀 프로젝트

--- a/index.html
+++ b/index.html
@@ -359,6 +359,63 @@
                     <div class="card mb-3" >
                         <div class="row no-gutters">
                             <div class="col-md-4 card-image-border img-fixed" >
+                                <div class="project-img5">
+                                    <div class="title-and-move-btn">
+                                        <div class="project-title">
+                                            <h5 class="card-title">인프런 클론코딩 프로젝트</h5>   
+                                        </div>
+                                        <div class="site-move">
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="https://github.com/Ark-inflearn/inflearn-clone-front" target="_blank">Github</a></button>
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="https://www.notion.so/c27935ea0d6f43a99aa87a178f983122" target="_blank">개발 일지</a></button>
+                                        </div> 
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-8 card-body-border">
+                                <div class="card-body" id="jikpool-project-card-body">
+                                    <p class="project-subtitle">프로젝트 소개</p>
+                                    <div class="project-contents">
+                                        각 팀원들이 보유한 기술로 직접 인프론 웹앱을 만드는 프로젝트
+                                    </div>
+                                    <p class="project-subtitle">팀 구성원</p>
+                                    <div class="project-contents">
+                                        프론트엔드 개발자 3명, 백엔드 개발자 3명
+                                    </div>
+                                    <p class="project-subtitle">맡은 역할 및 개발 기간</p>
+                                    <div class="project-contents">
+                                        프론트엔드 개발 / 2021.09 ~ 진행중
+                                    </div>
+                                    <p class="project-subtitle">사용한 기술</p>
+                                    <div class="project-skills">
+                                        <p class="skill-name">React</p>
+                                        <p class="skill-name">Next.js</p>
+                                        <p class="skill-name">Typescript</p>
+                                        <p class="skill-name">Styled-components</p>
+                                        <p class="skill-name">Material-UI</p>
+                                        <p class="skill-name">Redux</p>
+                                        <p class="skill-name">Redux-Saga</p>
+                                    </div>   
+                                    <details class="project-performance-tasks">
+                                        <summary class="project-subtitle">
+                                            진행한 일 및 배운 점
+                                        </summary>
+                                        <div>
+                                            <ul>
+                                                <li>강의 검색 및 목록을 보여주는 페이지를 구현중</li>
+                                                <li>리액트 성능 최적화를 위해 컴포넌트 분리 작업을 진행중</li>
+                                                <li>코드 리뷰를 통해 다양한 의견을 주고 받으며 소통 능력을 키우고, 재사용성과 가독성이 좋은 코드를 작성하는데 더 신경을 쓰게 되는 습관을 갖게 됨.</li>
+                                                <li>백엔드 팀과 CORS 오류를 같이 해결하면서 관련 지식을 습득하고, 프론트엔드에서 처리해줘야 하는 일들을 배우게 됨.</li>
+                                                <li>깃 허브 내 wiki에 개발하면서 겪었던 문제와 지식들을 팀원들과 공유하는 과정을 통해 깊이 이해하게 됨.</li>
+                                            </ul>
+                                        </div>
+                                    </details>             
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card mb-3" >
+                        <div class="row no-gutters">
+                            <div class="col-md-4 card-image-border img-fixed" >
                                 <div class="project-img2">
                                     <div class="title-and-move-btn">
                                         <div class="project-title">
