--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                                         </div>
                                         <div class="site-move">
                                             <button class="project-site-btn"><a class="project-site-btn-link" href="https://github.com/Ark-inflearn/inflearn-clone-front" target="_blank">Github</a></button>
-                                            <button class="project-site-btn"><a class="project-site-btn-link" href="https://www.notion.so/c27935ea0d6f43a99aa87a178f983122" target="_blank">개발 일지</a></button>
+                                            <button class="project-site-btn"><a class="project-site-btn-link" href="https://steadfast-cardinal-956.notion.site/c27935ea0d6f43a99aa87a178f983122" target="_blank">개발 일지</a></button>
                                         </div> 
                                     </div>
                                 </div>
