--- a/index.html
+++ b/index.html
@@ -402,10 +402,9 @@
                                         <div>
                                             <ul>
                                                 <li>강의 검색 및 목록을 보여주는 페이지를 구현중</li>
-                                                <li>리액트 성능 최적화를 위해 컴포넌트 분리 작업을 진행중</li>
-                                                <li>코드 리뷰를 통해 다양한 의견을 주고 받으며 소통 능력을 키우고, 재사용성과 가독성이 좋은 코드를 작성하는데 더 신경을 쓰게 되는 습관을 갖게 됨.</li>
-                                                <li>백엔드 팀과 CORS 오류를 같이 해결하면서 관련 지식을 습득하고, 프론트엔드에서 처리해줘야 하는 일들을 배우게 됨.</li>
-                                                <li>깃 허브 내 wiki에 개발하면서 겪었던 문제와 지식들을 팀원들과 공유하는 과정을 통해 깊이 이해하게 됨.</li>
+                                                <li>리액트 성능 최적화를 위해 컴포넌트 분리 작업을 진행함.</li>
+                                                <li>깃 허브 내 wiki에, 개발하면서 겪었던 문제와 지식들을 팀원들과 공유함.</li>
+                                                <li>코드 리뷰를 통해 다양한 의견을 주고 받으며 의사소통 능력을 키우고, 재사용성과 가독성이 좋은 코드를 작성하기 위해 노력하는 습관을 갖게 됨.</li>
                                             </ul>
                                         </div>
                                     </details>             
