Update: 인프런 프로젝트 소개 부분 내용 수정

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                                 <div class="card-body" id="jikpool-project-card-body">
                                     <p class="project-subtitle">프로젝트 소개</p>
                                     <div class="project-contents">
-                                        각 팀원들이 보유한 기술로 직접 인프론 웹앱을 만드는 프로젝트
+                                        각 팀원들이 보유한 기술로 직접 인프런 웹 사이트를 만드는 프로젝트
                                     </div>
                                     <p class="project-subtitle">팀 구성원</p>
                                     <div class="project-contents">
