--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                                             <ul>
                                                 <li>강의 검색 및 목록을 보여주는 페이지를 구현중</li>
                                                 <li>리액트 성능 최적화를 위해 컴포넌트 분리 작업을 진행함.</li>
-                                                <li>깃 허브 내 wiki에, 개발하면서 겪었던 문제와 지식들을 팀원들과 공유함.</li>
+                                                <li>GitHub 내 wiki에, 개발하면서 겪었던 문제와 지식들을 팀원들과 공유함.</li>
                                                 <li>코드 리뷰를 통해 다양한 의견을 주고 받으며 의사소통 능력을 키우고, 재사용성과 가독성이 좋은 코드를 작성하기 위해 노력하는 습관을 갖게 됨.</li>
                                             </ul>
                                         </div>
