--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nahyun Portfolio</title>
+
+    <!-- fonts -->
+    <link rel="stylesheet" rel="preload" href="css/fonts.css">
 </head>
 
 <body>
